semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad9/error.txt
error: invalid pattern name
  --> rules/syntax/bad9.yaml:4
3 |     pattern-either:
4 |       - patter: $X = 1
  |         ^^^^^^
5 |       - pattern: $X = 2
= help: valid pattern names are ['equivalences', 'fix', 'pattern', 'pattern-either', 'pattern-inside', 'pattern-not', 'pattern-not-inside', 'pattern-regex', 'pattern-where-python', 'patterns']
invalid pattern name: patter

run with --strict and there were 1 errors loading configs
